apps/monitoring/manifests/prometheus/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ignore-check.kube-linter.io/dangling-service: Check is incompatible with prometheus-operator
      CRDs
    nginx.ingress.kubernetes.io/auth-signin: https://auth.ankhmorpork.thaum.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.ankhmorpork.thaum.xyz/oauth2/auth
    probe-uri: /-/healthy
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.45.0
  name: prometheus-nginx
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.ankhmorpork.thaum.xyz
    secretName: prometheus-tls
